--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>HELOO!!!!</h1>
+<!DOCTYPE html>
+ 
+<html>
+    <head>
+        <title>
+            First Web Page
+        </title>
+    </head>
+ 
+    <body>
+        Hello World!
+    </body>
+</html>
